--- a/styles.css
+++ b/styles.css
@@ -153,82 +153,80 @@ main {
 
 /*
 =============== 
-Nav
+Counter
 ===============
 */
-nav {
-  background: var(--clr-white);
-  height: 3rem;
-  display: grid;
-  align-items: center;
-  box-shadow: var(--dark-shadow);
-}
-.nav-center {
-  width: 90vw;
-  max-width: var(--fixed-width);
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.nav-center h4 {
-  margin-bottom: 0;
-  color: var(--clr-primary-5);
-}
-.nav-links {
-  display: flex;
-}
-nav a {
-  text-transform: capitalize;
-  font-weight: 700;
-  font-size: 1rem;
-  color: var(--clr-primary-1);
-  letter-spacing: var(--spacing);
-  margin-right: 1rem;
-}
-nav a:hover {
-  color: var(--clr-primary-5);
-}
-/*
-=============== 
-Container
-===============
-*/
+
 main {
-  min-height: calc(100vh - 3rem);
+  min-height: 100vh;
   display: grid;
   place-items: center;
 }
 .container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
-.container h2 {
-  background: var(--clr-black);
-  color: var(--clr-white);
-  padding: 1rem;
-  border-radius: var(--radius);
-  margin-bottom: 2.5rem;
+#value {
+  font-size: 6rem;
+  font-weight: bold;
 }
-.color {
-  color: var(--clr-primary-5);
-}
-.btn-hero {
-  font-family: var(--ff-primary);
+.btn {
   text-transform: uppercase;
   background: transparent;
   color: var(--clr-black);
+  padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
-  font-weight: 700;
   transition: var(--transition);
+  font-size: 0.875rem;
   border: 2px solid var(--clr-black);
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
-  font-size: 1rem;
-  padding: 0.75rem 1.25rem;
+  margin: 0.5rem;
 }
-.btn-hero:hover {
+.btn:hover {
   color: var(--clr-white);
   background: var(--clr-black);
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.decrease {
+  background: var(--clr-red-light);
+  border-color: var(--clr-red-dark);
+}
+
+.decrease:hover {
+  background: var(--clr-red-dark);
+  color: var(--clr-white);
+}
+
+.increase {
+  background: var(--clr-green-light);
+  border-color: var(--clr-green-dark);
+}
+
+.increase:hover {
+  background: var(--clr-green-dark);
+  color: var(--clr-white);
+}
+
+.reset {
+  background: var(--clr-grey-5);
+  border-color: var(--clr-grey-3);
+}
+
+.reset:hover {
+  background: var(--clr-grey-3);
+  color: var(--clr-white);
 }
